css/expdb.css
/* ... */
.expdbtable {
  display: block;
  cursor: pointer;
  background-color: transparent;
  /*border: 1px solid #ff6666;*/
}

.expdbtable:hover {
  border-color: #4183c4;
  -webkit-box-shadow: 0px 0px 3px 3px rgba(0, 105, 214, 0.25);
  -moz-box-shadow: 0px 0px 3px 3px rgba(0, 105, 214, 0.25);
  box-shadow: 0px 0px 3px 3px rgba(0, 105, 214, 0.25);
}

.doubleLineHeight {
  line-height:200%;
}

.uppercase {
  text-transform: uppercase;
}

.membername{
	font-size: 110%;
	font-weight: normal;
	padding: 0px;
	margin: 0px;
}
.memberline{
 	font-size: 90%;
	font-weight: normal;
	margin-bottom:20px;
}
.userprofile{
	color: #40A236;
	font-style:italic;
	font-weight: normal;
	padding-left: 5px;
}


.justify {
  text-align: justify;
}

hr.softSmall {
  height: 1px;
  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  border: 0;
}

hr.hardSmall {
  margin-top:-10px;
  height: 1px;
  background-image: -webkit-linear-gradient(left, rgba(0,0,0,.1), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:    -moz-linear-gradient(left, rgba(0,0,0,.1), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:     -ms-linear-gradient(left, rgba(0,0,0,.1), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:      -o-linear-gradient(left, rgba(0,0,0,.1), rgba(0,0,0,.1), rgba(0,0,0,0));
  border: 0;
}



.verticalSpace50 {
  height: 50px;
}

.softText {
  font-weight: normal;
}

/* Tutorial */

      .embed-container {
            position: relative;
            padding-bottom: 56.25%; /* 16/9 ratio */
            padding-top: 30px; /* IE6 workaround*/
            height: 0;
            overflow: hidden;
        }
        .embed-container iframe,
        .embed-container object,
        .embed-container embed {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
        }

/* Base class */
.bs-docs-tutorial {
  position: relative;
  margin: 0px;
  padding: 0px;
  *padding-top: 19px;
  max-width: 700px;
  background-color: #fff;
  border: 1px solidt #ddd;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}

/* Echo out a label for the example */
.bs-docs-tutorial:after {
  content: "Tutorial";
  position: absolute;
  top: -1px;
  left: -1px;
  padding: 3px 7px;
  font-size: 12px;
  font-weight: bold;
  background-color: #f5f5f5;
  border: 1px solid #ddd;
  color: #9da0a4;
  -webkit-border-radius: 4px 0 4px 0;
     -moz-border-radius: 4px 0 4px 0;
          border-radius: 4px 0 4px 0;
}


.ui-autocomplete {
	max-height: 200px;
	overflow-y: auto;
	/* prevent horizontal scrollbar */
	overflow-x: hidden;
  border-top: none !important;
  border-radius: 0px !important;
  z-index: 3000;
}

.img-modal{
  display: block;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
}

.sqlmessage-buttonbox {
        min-height: 20px;
    }

.datainfo {
  color: #999;
  padding-top: 3px;
  padding-bottom: 40px;
  font-size: 10pt;
  clear: both;
}

.datainfo i{
  margin-left: 10px;
  margin-right: 5px;
}

#disqus_thread {
     position: relative;
}
#disqus_thread:after {
     content: "";
     display: block;
     height: 55px;
     width: 100%;
     position: absolute;
     bottom: 0;
     background: white;
}

.disquspanel{
  margin-top: 50px;
}

html, body {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   width: auto !important;  /* Firefox will set width as auto */
   min-width: 480px; /* suppose you want minimun width of 1000px */
   background-color: #ececec;
   margin-bottom: 0px !important;
   position: relative;
}

      a:hover {
        cursor: pointer;
      }

      a {
        cursor: pointer;
      }

      .openmlsectioninfo p {
	color: #444;
	padding-top: 3px;
	font-size: 11pt;
      }

      td {
	color: #666;
	font-size: 11pt;
      }

      .form-group label{
   	font-weight: 600;
	margin-bottom: 0px;
      }

      /* Wrapper for page content to push down footer */
      #wrap {
        height: 100%;
        /* Negative indent footer by it's height */
        margin: 0 auto 0px;
        margin-top: 50px;
        position: relative;
      }

      /* Set the fixed height of the footer here */
      #push,
      #footer {
	      padding: 5px;
      }

.expand-all a {
    color: #08C;
    font-size: 14px;
    font-weight: bold;
    padding-left: 7px;
    text-decoration: none;
    cursor: pointer;
  }

.expand-all a:hover{
    color: #04C;
  }

.nav-search {
  *zoom: 1;
}

.nav-search:before,
.nav-search:after {
  display: table;
  line-height: 0;
  content: "";
}

.nav-search:after {
  clear: both;
}


.nav-search > li {
  float: left;
  padding-top:8px;
  padding-bottom:0px;
}

.nav-search > li > a:hover {
  background-color: #ffffff;
  color: #ff0000;
}

.nav-search > li > a {
  padding-right: 11px;
  padding-left: 11px;
  margin-right: 2px;
  line-height: 14px;
  color: #777;
}

.nav-search > li > a {
  padding-top: 8px;
  padding-bottom: 10px;
  margin-top: 2px;
  margin-bottom: 0px;
}

.nav-search > .active > a{
  border-bottom: 3px solid #ff0000;
  color: #ff0000;
  margin-bottom: -3px;
}

.runmenu{
  list-style-type: none;
  padding:0;
  margin-top:5px;
  margin-bottom:30px;
  width:100%;
  font-family: 'Roboto', sans-serif;
  font-weight: 300 !important;
}


.runmenu > li {
  padding-bottom:12px;
  padding-top:0px;
}

.runmenu > li > a:hover {
  color: #ff0000;
  text-decoration: none;
}

.runmenu > li > a {
  padding-right: 11px;
  padding-left: 11px;
  margin-right: 2px;
  line-height: 14px;
  color: #777;
}

.runmenu > li > a {
  padding-top: 8px;
  padding-bottom: 0px;
  margin-top: 2px;
  margin-bottom: 10px;
}
/* ... */

